@@ -3,14 +3,15 @@
 namespace dhope0000\LXDClient\Tools\Storage;
 
 use dhope0000\LXDClient\Model\Client\LxdClient;
-use dhope0000\LXDClient\Model\Hosts\HostList;
+use dhope0000\LXDClient\Tools\Utilities\StringTools;
+use dhope0000\LXDClient\Model\Hosts\GetDetails;
 
 class GetStoragePool
 {
-    public function __construct(HostList $hostList, LxdClient $lxdClient)
+    public function __construct(LxdClient $lxdClient, GetDetails $getDetails)
     {
-        $this->hostList = $hostList;
         $this->lxdClient = $lxdClient;
+        $this->getDetails = $getDetails;
     }
 
     public function get(int $hostId, string $poolName)
@@ -18,6 +19,11 @@ class GetStoragePool
         $client = $this->lxdClient->getANewClient($hostId);
         $info = $client->storage->info($poolName);
         $info["resources"] = $client->storage->resources->info($poolName);
+        $info["used_by"] = StringTools::usedByStringsToLinks(
+            $hostId,
+            $info["used_by"],
+            $this->getDetails->fetchAlias($hostId)
+        );
         return $info;
     }
 }
